<resources>
    <string name="app_name">RSS Reader</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_feeds">Feeds</string>
    <string name="menu_settings">Settings</string>
    <string name="feed_item_enclosure">Feed Item Enclosure</string>
    <string name="feed_icon_description">feed icon</string>
    <string name="favorite_icon_description">favorite icon</string>
    <string name="share_icon_description">share icon</string>
    <string name="bookmark_icon_description">bookmark icon</string>
    <string name="get_started">Get Started</string>
    <string name="next">Next</string>
    <string name="select_feeds_title">What Interests You?</string>
    <string name="login_title">Log Into Account To Save Feeds</string>
</resources>