<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.github.jonforshort.rssreader.ui.main.MainFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_feed"
        android:name="com.github.jonforshort.rssreader.ui.feeds.FeedSelectionFragment"
        android:label="@string/menu_feeds"
        tools:layout="@layout/fragment_feed_selection" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.github.jonforshort.rssreader.ui.settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />

</navigation>