<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="feedArticleEventListener"
            type="com.github.jonforshort.rssreader.ui.main.feedArticle.FeedArticleViewObserver" />

        <variable
            name="feedArticle"
            type="com.github.jonforshort.rssreader.ui.main.feedArticle.FeedArticle" />
    </data>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/feed_fragment_card_margin"
        card_view:cardCornerRadius="4dp"
        card_view:cardElevation="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <WebView
                android:id="@+id/feedItemContentHtml"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/feed_fragment_card_margin"
                app:loadHtml="@{feedArticle.contentHtml}"
                tools:text="Feed Item Content HTML" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/feedIconImageView"
                    android:layout_width="@dimen/feed_fragment_card_feed_icon"
                    android:layout_height="@dimen/feed_fragment_card_feed_icon"
                    android:layout_marginStart="16dp"
                    android:contentDescription="@string/feed_icon_description"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:loadImage="@{feedArticle.providerIconUrl}"
                    tools:srcCompat="@tools:sample/avatars" />

                <TextView
                    android:id="@+id/providerName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/feed_fragment_card_margin"
                    android:text="@{feedArticle.providerName}"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/feedIconImageView"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="Provider Name" />

                <TextView
                    android:id="@+id/feedItemPublishDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{feedArticle.publishDate.toString()}"
                    android:textAppearance="@android:style/TextAppearance.Small"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/bookmarkImageView"
                    app:layout_constraintStart_toEndOf="@+id/providerName"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="Publish Date" />

                <ImageView
                    android:id="@+id/shareImageView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/feed_fragment_card_margin"
                    android:layout_marginEnd="16dp"
                    android:contentDescription="@string/share_icon_description"
                    android:onClick="@{(view) -> feedArticleEventListener.onShareClicked(view, feedArticle)}"
                    android:src="@drawable/ic_share"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/favoriteImageView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/feed_fragment_card_margin"
                    android:contentDescription="@string/favorite_icon_description"
                    android:onClick="@{(view) -> feedArticleEventListener.onFavoriteClicked(view, feedArticle)}"
                    android:src="@drawable/ic_favorite_border"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/shareImageView"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/bookmarkImageView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/feed_fragment_card_margin"
                    android:contentDescription="@string/bookmark_icon_description"
                    android:onClick="@{(view) -> feedArticleEventListener.onBookmarkClicked(view, feedArticle)}"
                    android:src="@drawable/ic_bookmark_border"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/favoriteImageView"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</layout>
